# solana-app

./: .gitignore  Cargo.toml  run.sh
src/: client.rs  lib.rs  main.rs  utils.rs
