[package]
name = "trading-bot"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
solana-sdk = "1.18"
solana-client = "1.18"
yaml-rust = "0.4"
thiserror = "1"
home = "0.5.3"
borsh = "1.5.0"
jupiter-swap-api-client = "0.1.0"